# nlp-natasha-example

./: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
src/: main.py
src/dto/: predict_in_dto.py  pullenti_addr_out_dto.py  pullenti_names_out_dto.py
src/services/: nlp_pullenti.py  nlp_service.py
