[tool.poetry]
name = "nlp-natasha"
version = "0.1.0"
description = ""
authors = ["KlimentRu"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
natasha = "^1.4.0"
black = "^22.3.0"
gunicorn = "^20.1.0"
pullenti-client = "^0.6.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
